--- a/src/hasher/hasher.yaml
+++ b/src/hasher/hasher.yaml
@@ -3,3 +3,17 @@ kind: Deployment
 metadata:
   name: hasher
 spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: hasher
+  template:
+    metadata:
+      labels:
+        app: hasher
+    spec:
+      containers:
+        - image: localhost/hasher
+          name: hasher
+          ports:
+            - containerPort: 8080
