--- a/src/worker/deploy.yaml
+++ b/src/worker/deploy.yaml
@@ -13,5 +13,5 @@ spec:
         app: worker
     spec:
       containers:
-        - image: localhost/worker
+        - image: academiaonline/worker
           name: worker
