--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,7 +57,8 @@ jobs:
         run: |
           while true
           do sleep 10
-          kubectl logs deploy/worker 2>& 1 | grep Coin.found && break
+          kubectl describe po
+          #kubectl logs deploy/worker 2>& 1 | grep Coin.found && break
           done
           
           
