--- a/.github/workflows/ci-storage.yaml
+++ b/.github/workflows/ci-storage.yaml
@@ -30,4 +30,6 @@ jobs:
               sleep 10
               kubectl get all
               kubectl logs redis-po
+              touch /tmp/redis/sebastian
+              kubectl exec redis-po -- ls /data|grep sebastian&&break              
             done
