--- a/.github/workflows/ci-storage.yaml
+++ b/.github/workflows/ci-storage.yaml
@@ -25,12 +25,15 @@ jobs:
         run: kubectl apply -f main/etc/kubernetes/manifests/po-redis.yaml
       - name: test
         run:  |
+          set -x
           while true
             do 
               sleep 10
               kubectl get all
               kubectl logs redis-po
-              mkdir -p /tmp/redis/
+              mkdir -p /tmp/redis
               touch /tmp/redis/sebastian
+              ls -l /tmp/redis
+              kubectl exec redis-po -- ls /data -l
               kubectl exec redis-po -- ls /data|grep sebastian&&break              
             done
