--- a/.github/workflows/ci-storage.yaml
+++ b/.github/workflows/ci-storage.yaml
@@ -31,9 +31,9 @@ jobs:
               sleep 10
               kubectl get all
               kubectl logs redis-po
-              mkdir -p /tmp/redis
-              touch /tmp/redis/sebastian
-              ls -l /tmp/redis
-              kubectl exec redis-po -- ls /data -l
-              kubectl exec redis-po -- ls /data|grep sebastian&&break              
+              kubectl exec redis-po -- touch /data/sebastian
+              kubectl exec redis-po -- find /data
+              kubectl describe pv
+              find /tmp/redis
+              find /tmp/redis|grep sebastian&&break
             done
