--- a/.github/workflows/ci-storage.yaml
+++ b/.github/workflows/ci-storage.yaml
@@ -32,6 +32,7 @@ jobs:
               kubectl get all
               kubectl logs redis-po
               kubectl describe pv
+              kubectl exec redis-po -- id
               kubectl exec redis-po -- touch /data/sebastian
               kubectl exec redis-po -- find /data
               find /tmp/redis
