--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,15 +38,15 @@ jobs:
         run: minikube start --driver=docker
       - name: deploy
         run: |
-          kubectl apply -f src/hasher/deploy.yaml
+          kubectl apply -f src/hasher/deploy-test.yaml
           kubectl apply -f src/hasher/svc.yaml
           kubectl apply -f src/redis/sts.yaml
           kubectl apply -f src/redis/svc.yaml
-          kubectl apply -f src/rng/ds.yaml
+          kubectl apply -f src/rng/ds-test.yaml
           kubectl apply -f src/rng/svc.yaml
-          kubectl apply -f src/webui/deploy.yaml
+          kubectl apply -f src/webui/deploy-test.yaml
           kubectl apply -f src/webui/svc.yaml
-          kubectl apply -f src/worker/deploy.yaml
+          kubectl apply -f src/worker/deploy-test.yaml
       - name: test-redis
         run: |
           while true
