--- a/src/hasher/deploy-test.yaml
+++ b/src/hasher/deploy-test.yaml
@@ -13,7 +13,7 @@ spec:
         app: hasher
     spec:
       containers:
-        - image: academiaonline/hasher:test
+        - image: miguelsan/hasher:test
           name: hasher
           ports:
             - containerPort: 8080
