--- a/src/rng/ds-test.yaml
+++ b/src/rng/ds-test.yaml
@@ -12,7 +12,7 @@ spec:
         app: rng
     spec:
       containers:
-        - image: academiaonline/rng:test
+        - image: miguelsan/rng:test
           name: rng
           ports:
             - containerPort: 8080
