--- a/src/webui/deploy-test.yaml
+++ b/src/webui/deploy-test.yaml
@@ -13,7 +13,7 @@ spec:
         app: webui
     spec:
       containers:
-        - image: academiaonline/webui:test
+        - image: miguelsan/webui:test
           name: webui
           ports:
             - containerPort: 8080
