--- a/src/worker/deploy-test.yaml
+++ b/src/worker/deploy-test.yaml
@@ -13,5 +13,5 @@ spec:
         app: worker
     spec:
       containers:
-        - image: academiaonline/worker:test
+        - image: miguelsan/worker:test
           name: worker
