--- a/src/worker/deploy.yaml
+++ b/src/worker/deploy.yaml
@@ -13,5 +13,5 @@ spec:
         app: worker
     spec:
       containers:
-        - image: academiaonline/worker:latest
+        - image: miguelsan/worker:latest
           name: worker
